--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#@title ## Install Dependencies\n",
     "\n",
-    "!pip install git+https://github.com/lexiconium/textual-inversion/tree/main > /dev/null 2>&1"
+    "!pip install git+https://github.com/lexiconium/textual-inversion > /dev/null 2>&1"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,6 +84,24 @@
     "initializer_token = \"cat\"  #@param {type:\"string\"}\n",
     "\n",
     "#@markdown ---"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#@title ## Login to Hugging Face Hub\n",
+    "\n",
+    "from huggingface_hub import notebook_login\n",
+    "\n",
+    "notebook_login()"
    ],
    "metadata": {
     "collapsed": false,
