add conceptualizer notebook

--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -9,7 +9,8 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
+    },
+    "id": "Qxv6dZfXoyId"
    }
   },
   {
@@ -22,15 +23,16 @@
     "!pip install git+https://github.com/lexiconium/textual-inversion > /dev/null 2>&1"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "zFqziinSoyIf"
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#@title ## Import Dependencies\n",
@@ -49,10 +51,11 @@
     "from textual_inversion.pipeline import TextualInversionDiffusionPipeline, TextualInversionDiffusionTrainingConfig"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "8DphbfrVoyIg"
    }
   },
   {
@@ -98,10 +101,11 @@
     "#@markdown ---"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "hxy5JNOIoyIh"
    }
   },
   {
@@ -116,10 +120,11 @@
     "notebook_login()"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "6_9rLs4QoyIh"
    }
   },
   {
@@ -185,10 +190,11 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "UFMPCTxLoyIi"
    }
   },
   {
@@ -241,11 +247,12 @@
     "uploader.launch()"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
-    }
+    },
+    "cellView": "form",
+    "id": "QCQyGM1soyIj"
    }
   },
   {
@@ -278,10 +285,11 @@
     "pipeline = pipeline.train(training_config=training_config, dataset=dataset)"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "cellView": "form",
+    "id": "_JlpT3ZLoyIj"
    }
   },
   {
@@ -317,11 +325,12 @@
     ").launch()"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
-    }
+    },
+    "cellView": "form",
+    "id": "3r2uPiLLoyIk"
    }
   }
  ],
@@ -342,7 +351,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  }
+  },
+  "colab": {
+   "provenance": [],
+   "toc_visible": true
+  },
+  "accelerator": "GPU",
+  "gpuClass": "standard"
  },
  "nbformat": 4,
  "nbformat_minor": 0
