add conceptualizer notebook

--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -10,7 +10,7 @@
     "pycharm": {
      "name": "#%% md\n"
     },
-    "id": "Qxv6dZfXoyId"
+    "id": "T_caT1KVpSTg"
    }
   },
   {
@@ -27,7 +27,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "zFqziinSoyIf"
+    "id": "s9U3Ln-ypSTk"
    }
   },
   {
@@ -55,7 +55,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "8DphbfrVoyIg"
+    "id": "mXKZaCBbpSTl"
    }
   },
   {
@@ -105,7 +105,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "hxy5JNOIoyIh"
+    "id": "0sMDAJwSpSTm"
    }
   },
   {
@@ -124,7 +124,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "6_9rLs4QoyIh"
+    "id": "WikThWkzpSTn"
    }
   },
   {
@@ -194,7 +194,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "UFMPCTxLoyIi"
+    "id": "NbuQQvE7pSTn"
    }
   },
   {
@@ -252,7 +252,7 @@
      "is_executing": true
     },
     "cellView": "form",
-    "id": "QCQyGM1soyIj"
+    "id": "2ovAPoHzpSTo"
    }
   },
   {
@@ -289,7 +289,7 @@
      "name": "#%%\n"
     },
     "cellView": "form",
-    "id": "_JlpT3ZLoyIj"
+    "id": "mW07JXmVpSTo"
    }
   },
   {
@@ -330,7 +330,7 @@
      "is_executing": true
     },
     "cellView": "form",
-    "id": "3r2uPiLLoyIk"
+    "id": "DU0V6NgRpSTp"
    }
   }
  ],
@@ -353,7 +353,12 @@
    "version": "2.7.6"
   },
   "colab": {
-   "provenance": [],
+   "provenance": [
+    {
+     "file_id": "https://github.com/lexiconium/textual-inversion/blob/main/conceptualizer.ipynb",
+     "timestamp": 1662750478862
+    }
+   ],
    "toc_visible": true
   },
   "accelerator": "GPU",
