add width and height settings

--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "#@title ## Import Dependencies\n",
@@ -113,6 +113,65 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "#@title ## Upload Data\n",
+    "\n",
+    "g_save_dir = \"\"\n",
+    "\n",
+    "with gr.Blocks() as uploader:\n",
+    "    with gr.Row().style(equal_height=True):\n",
+    "        uploaded_files = gr.File(\n",
+    "            file_count=\"multiple\",\n",
+    "            label=\"Upload images\",\n",
+    "            interactive=True\n",
+    "        )\n",
+    "\n",
+    "        with gr.Column():\n",
+    "            status_msg = gr.Textbox(\n",
+    "                value=\"If uploaded, click Save.\",\n",
+    "                lines=10,\n",
+    "                label=\"Status\",\n",
+    "                show_label=False,\n",
+    "                interactive=False\n",
+    "            )\n",
+    "            save_button = gr.Button(\"Save\", variant=\"primary\")\n",
+    "\n",
+    "\n",
+    "    def save_fn(tmpfiles):\n",
+    "        global g_save_dir\n",
+    "\n",
+    "        save_dir = os.path.join(os.getcwd(), secrets.token_hex(nbytes=16))\n",
+    "        os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "        for tmpfile in tmpfiles:\n",
+    "            shutil.copy(tmpfile.name, save_dir)\n",
+    "\n",
+    "        g_save_dir = save_dir\n",
+    "\n",
+    "        return \"Done.\"\n",
+    "\n",
+    "\n",
+    "    save_button.click(\n",
+    "        save_fn,\n",
+    "        inputs=[uploaded_files],\n",
+    "        outputs=[status_msg]\n",
+    "    )\n",
+    "\n",
+    "uploader.launch()"
+   ],
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    },
+    "cellView": "form",
+    "id": "2ovAPoHzpSTo"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "#@title ## Login to Hugging Face Hub\n",
     "\n",
     "from huggingface_hub import notebook_login\n",
@@ -120,11 +179,10 @@
     "notebook_login()"
    ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    },
-    "cellView": "form",
-    "id": "WikThWkzpSTn"
+    }
    }
   },
   {
@@ -187,80 +245,7 @@
     "    mixed_precision=mixed_precision,\n",
     "    seed=seed,\n",
     "    output_dir=output_dir\n",
-    ")"
-   ],
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "cellView": "form",
-    "id": "NbuQQvE7pSTn"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#@title ## Upload Data\n",
-    "\n",
-    "g_save_dir = \"\"\n",
-    "\n",
-    "with gr.Blocks() as uploader:\n",
-    "    with gr.Row(equal_height=True):\n",
-    "        uploaded_files = gr.File(\n",
-    "            file_count=\"multiple\",\n",
-    "            label=\"Upload images\",\n",
-    "            interactive=True\n",
-    "        )\n",
-    "        status_msg = gr.Textbox(\n",
-    "            value=\"If uploaded, click Save.\",\n",
-    "            lines=10,\n",
-    "            label=\"Status\",\n",
-    "            show_label=False,\n",
-    "            interactive=False\n",
-    "        )\n",
-    "\n",
-    "    save_button = gr.Button(\"Save\")\n",
-    "\n",
-    "\n",
-    "    def save_fn(tmpfiles):\n",
-    "        global g_save_dir\n",
-    "\n",
-    "        save_dir = os.path.join(os.getcwd(), secrets.token_hex(nbytes=16))\n",
-    "        os.makedirs(save_dir, exist_ok=True)\n",
-    "\n",
-    "        for tmpfile in tmpfiles:\n",
-    "            shutil.copy(tmpfile.name, save_dir)\n",
-    "\n",
-    "        g_save_dir = save_dir\n",
-    "\n",
-    "        return \"Done.\"\n",
-    "\n",
-    "\n",
-    "    save_button.click(\n",
-    "        save_fn,\n",
-    "        inputs=[uploaded_files],\n",
-    "        outputs=[status_msg]\n",
-    "    )\n",
-    "\n",
-    "uploader.launch()"
-   ],
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    },
-    "cellView": "form",
-    "id": "2ovAPoHzpSTo"
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#@title ## Train\n",
+    ")\n",
     "\n",
     "transforms = torchvision.transforms.Compose([\n",
     "    torchvision.transforms.Resize(\n",
@@ -285,11 +270,10 @@
     "pipeline = pipeline.train(training_config=training_config, dataset=dataset)"
    ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    },
-    "cellView": "form",
-    "id": "mW07JXmVpSTo"
+    }
    }
   },
   {
@@ -299,10 +283,19 @@
    "source": [
     "#@title ## Generate\n",
     "\n",
-    "def text_to_image(prompt, num_samples, num_inference_steps, guidance_scale):\n",
+    "def text_to_image(\n",
+    "    prompt,\n",
+    "    num_samples,\n",
+    "    height,\n",
+    "    width,\n",
+    "    num_inference_steps,\n",
+    "    guidance_scale\n",
+    "):\n",
     "    with torch.autocast(\"cuda\" if torch.cuda.is_available() else \"cpu\"):\n",
     "        images = pipeline(\n",
     "            [prompt] * num_samples,\n",
+    "            height=height,\n",
+    "            width=width,\n",
     "            num_inference_steps=num_inference_steps,\n",
     "            guidance_scale=guidance_scale\n",
     "        ).images\n",
@@ -313,6 +306,8 @@
     "interface_inputs = [\n",
     "    gr.Textbox(placeholder=\"Write a prompt you want to generate in image.\", label=\"Prompt\"),\n",
     "    gr.Number(value=2, label=\"Number of samples\", precision=0),\n",
+    "    gr.Number(value=512, label=\"Height\", precision=0),\n",
+    "    gr.Number(value=512, label=\"Width\", precision=0),\n",
     "    gr.Slider(minimum=10, maximum=100, value=50, step=1, label=\"Number of inference steps\"),\n",
     "    gr.Slider(minimum=1, maximum=10, value=7.5, step=0.1, label=\"guidance_scale\")\n",
     "]\n",
@@ -325,12 +320,23 @@
     ").launch()"
    ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
-    },
-    "cellView": "form",
-    "id": "DU0V6NgRpSTp"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
