add width and height settings

--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -183,7 +183,7 @@
           "name": "#%%\n"
         },
         "cellView": "form",
-        "id": "-60jU6_SdvYM"
+        "id": "M4nthYIUeMcr"
       }
     },
     {
@@ -191,7 +191,7 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "#@title ## Setup\n",
+        "#@title ## Train\n",
         "\n",
         "tokenizer = CLIPTokenizer.from_pretrained(\n",
         "    pretrained_model_name_or_path,\n",
@@ -275,7 +275,7 @@
           "name": "#%%\n"
         },
         "cellView": "form",
-        "id": "FyVleht-dvYN"
+        "id": "q1FWaB8JeMcs"
       }
     },
     {
@@ -327,7 +327,7 @@
           "is_executing": true
         },
         "cellView": "form",
-        "id": "utW0VWHBdvYN"
+        "id": "0IZ-DjCbeMcs"
       }
     },
     {
@@ -339,7 +339,7 @@
         "pycharm": {
           "name": "#%%\n"
         },
-        "id": "PNpL0vfPdvYO"
+        "id": "dfBHs106eMct"
       }
     }
   ],
