add save feature

--- a/conceptualizer.ipynb
+++ b/conceptualizer.ipynb
@@ -268,7 +268,10 @@
         "    learnable_property=learnable_property\n",
         ")\n",
         "\n",
-        "pipeline = pipeline.train(training_config=training_config, dataset=dataset)"
+        "pipeline = pipeline.train(training_config=training_config, dataset=dataset)\n",
+        "pipeline.save_pretrained(output_dir)\n",
+        "\n",
+        "print(f\"Pipeline saved to {output_dir}.\")"
       ],
       "metadata": {
         "pycharm": {
